# diginotes

./: DigiNotes.kdevelop.filelist  DigiNotes.kdevelop.pcs  Doxyfile  ProjectHome.md  README  diginotes.kdevelop  diginotes.kdevses
samples/: PAGE_001.DHW
src/: CMakeLists.txt  dhwdata.cpp  dhwreader.cpp  dhwreader.h  digipad.cpp  digipad.h  log.txt  main.cpp  mainwindow.cpp  mainwindow.h  stroke.cpp  stroke.h  viewer.cpp  viewer.h  viewer.ui
trunk/: CMakeLists.txt  DigiNotes.kdevelop.filelist  DigiNotes.kdevelop.pcs  diginotes.kdevelop  diginotes.kdevses
trunk/src/: CMakeLists.txt  Makefile  dhwdata.cpp  dhwdata.h  dhwreader.cpp  dhwreader.h  digipad.cpp  main.cpp  mainwindow.cpp  mainwindow.h  stroke.cpp  ui_viewer.h  viewer.cpp  viewer.h
