FIND_PACKAGE( Qt4 REQUIRED )
INCLUDE( FindQt4 )
INCLUDE_DIRECTORIES( ${QT_INCLUDES} ${QT_GUI_INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
SET( CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH} )
SET( SRC main.cpp dhwreader.cpp dhwdata.cpp stroke.cpp mainwindow.cpp viewer.cpp digipad.cpp )
SET( UI_SRC viewer.ui )
QT4_WRAP_UI( UI_SRC_H ${UI_SRC} )
QT4_AUTOMOC( ${SRC} )
ADD_DEFINITIONS( ${QT_DEFINITIONS} )
ADD_EXECUTABLE(diginotes ${SRC} ${UI_SRC_H} )
TARGET_LINK_LIBRARIES( diginotes ${QT_QTCORE_LIBRARY_DEBUG} ${QT_QTGUI_LIBRARY_DEBUG} )
