FIND_PACKAGE( Qt4 REQUIRED )
INCLUDE_DIRECTORIES( ${QT_INCLUDES} ${QT_GUI_INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
SET( SRC main.cpp dhwreader.cpp dhwdata.cpp stroke.cpp mainwindow.cpp viewer.cpp editor.cpp digipad.cpp )
SET( UI_SRC viewer.ui editor.ui )
QT4_WRAP_UI( UI_SRC_H ${UI_SRC} )
QT4_AUTOMOC( ${SRC} )
ADD_DEFINITIONS( ${QT_DEFINITIONS} )
ADD_EXECUTABLE(diginotes ${SRC} ${UI_SRC_H} )
TARGET_LINK_LIBRARIES( diginotes ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} ${QT_QTOPENGL_LIBRARY} )